--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "burnt": "^0.12.2",
     "expo": "~50.0.14",
     "expo-build-properties": "~0.11.1",
+    "expo-haptics": "^12.8.1",
     "expo-linear-gradient": "^12.7.2",
+    "expo-secure-store": "~12.8.1",
     "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
+    "expo-web-browser": "^12.8.2",
     "moment": "^2.30.1",
     "moti": "^0.28.1",
     "react": "18.2.0",
@@ -34,9 +37,9 @@
     "react-native-screens": "~3.29.0",
     "react-native-skeleton-loading": "^1.0.7",
     "react-native-svg": "^15.1.0",
+    "react-native-webview": "^13.8.4",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
