--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.2",
@@ -20,6 +21,7 @@
     "expo-build-properties": "~0.11.1",
     "expo-haptics": "^12.8.1",
     "expo-linear-gradient": "^12.7.2",
+    "expo-router": "^3.4.8",
     "expo-secure-store": "~12.8.1",
     "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
@@ -33,11 +35,14 @@
     "react-native-country-codes-picker": "^2.3.5",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-pager-view": "6.2.3",
+    "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-skeleton-loading": "^1.0.7",
     "react-native-svg": "^15.1.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-webview": "^13.8.4",
+    "react-navigation": "^5.0.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0"
